# vector-encode-issue

./: README.md  pyproject.toml
.github/workflows/: comment_similar.yaml  update_embeddings.yaml
embeddings/: issue-1.json  issue-4.json
src/: comment_on_similar.py  github_client.py  similarity_check.py  update_embedding_for_issue.py
tests/: test_similarity.py
